# outloop-waf

./: .dockerignore  .env.example  .gitignore  DESIGN_SYSTEM.md  Dockerfile  FINAL_REDESIGN_REPORT.md  FRONTEND_AUDIT.md  LICENSE  README.md  UI_CHANGELOG.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: __init__.py  index.py
api/core/: __init__.py  abuseipdb.py  antigravity.py  logic.py  redis_client.py
api/routes/: __init__.py  admin.py  events.py  gravity.py  health.py  metrics.py  secure.py
api/static/: app.js  index.html  style.css
api/utils/: __init__.py  logger.py
api/waf/: __init__.py  engine.py  middleware.py  rate_limiter.py  rules.py
frontend/: astro.config.mjs  package.json
frontend/src/components/: GravityStatus.jsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
tests/: __init__.py  conftest.py  test_abuseipdb.py  test_admin.py  test_antigravity.py  test_evasion.py  test_events.py  test_health.py  test_metrics.py  test_rate_limiter.py  test_waf.py
